css/main.css
@charset "utf-8";
@import url(../css/html5reset-1.6.1.css); /*reset css*/

/* google fonts */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');

/* global */
h1, h2, p, dl, small {
    line-height: 1.5em;
    color: #333;
}
small {
    display: block;
    width: 100%;
    margin: 0;
    font-size: 12px;
    line-height: 1.0em;
    text-align: center;
}
dl {
    display: block;
    width: 100%;
}
dt {
    float: left;
    text-align: center;
    font-size: 0.5em;
    line-height: 1.5em;
    padding: 0.25em 0;
    width: calc(30% + 1.0em);
}
dt::after {
    content: ":";
}
dd {
    display: block;
    font-size: 0.5em;
    line-height: 1.5em;
    padding: 0.25em 0;
    padding-left: calc(30% + 1.0em);
    width: calc(70% - 1.0em);
}

.section_title {
    text-align: center;
}
.section_title span {
    display: block;
    width: 2.0rem;
    height: 2px;
    margin: 0 auto;
    border-radius: 1px;
}
.section_title p {
    font-size: 0.5rem;
    margin-top: 0.3333em;
}

.inner {
  width: calc(100% - 90px);
  max-width: 980px;
  margin: 0 auto;
  padding: 80px 0;
}
.inner:after {
  content: "";
  clear: both;
  display: block;
}

.br_sp {
    display: none;
}
@media screen and (max-width: 1024px) {
    .br_sp {
        display: block;
    }
}

.global_nav {
    display: block;
    position: absolute;
    font-size: 1.5rem;
}
.global_nav ul {
    display: block;
    list-style: none;
}
.global_nav ul li {
    display: inline-block;
    font-size: 0.5em;
    letter-spacing: 0.1em;
}
.global_nav ul li a {
    text-decoration: none;
    line-height: 1.5em;
    color: #fff;
    cursor: pointer;
    /* ToDo: fix padding*/
}
.global_nav ul li a:hover {
    color: #006934;
    background-color: rgba(255, 255, 255, 0.25);
}
.global_nav ul li a span {
    display: block;
    width: 80%;
    height: 4px;
    background-color: #fff;
    border-radius: 2px;
    margin: 0 auto;
}
/* button */
.shop_btn {
    display: none;
}
.scroll {
    display: none;
}
.page_top_btn {
    display: none;
}

/* root */
html {
    font-size: 24px;
    line-height: 1.5em;
    letter-spacing: 0.05em;
    font-family: 'Noto Sans JP', sans-serif;
    background-color: #DCEFA7;
}
@media screen and (max-width: 1024px) {
    html {
        font-size: 18px;
    }
}
@media screen and (max-width: 599px) {
    html {
        font-size: 16px;
    }
}

/* header */
#header {
    display: block;
    width: 100%;
    height: 200px;
    line-height: 1.5em;
    letter-spacing: 0.1em;
    background: transparent;
    position: fixed;
    z-index: 1000;
    color: #fff;
}
#header .inner {
    position: relative;
    padding: 0;
}
#header .tell {
    display: block;
    position: absolute;
    font-size: 1.5rem;
    font-weight: 800;
    top: 35px;
    right: 20px;
}
#header .tell p {
    font-size: 1.0em;
    color: #fff;
}
#header .tell p:nth-child(2) {
    font-size: 0.5em;
}
#header .global_nav {
    top: calc(189px - 2.0rem);
    right: 40px;
}

#header .logo_pc {
    display: block;
    width: 180px;
    height: 168.56px;
    background-image: url("../img/svg/kobayasu_noen_logo.svg");
    margin-top: 11px;
    margin-left: 40px;
}
@media screen and (max-width: 1024px) {
    #header .logo_pc {
        display: none;
    }
}
#header .logo_sp {
    display: none;
}
@media screen and (max-width: 1024px) {
    #header .logo_sp {
        display: block;
    }
}
.toggle_btn {
    display: none;
}
@media screen and (max-width: 1024px) {
    .toggle_btn {
        display: block;
    }
}
#header .global_nav .logo_nav {
    display: none;
}
@media screen and (max-width: 1024px) {
    #header .global_nav .logo_nav {
        display: block;
    }
}

/* top */
.top {
    display: block;
    width: 100%;
    height: 50vh;
    text-align: center;
    position: absolute;
    top: 0;
    left: 0;
}
.top_image {
    display: block;
    width: 100%;
    height: 50vh;
    object-fit: cover;
    mask-position: center;
    -webkit-mask-position: center;
    mask-size: cover;
    -webkit-mask-size: cover;
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
    position: relative;
    top: 0;
    left: 0;
}
#top_image {
    mask-image: url(../img/svg/kobayasu_top.svg);
    -webkit-mask-image: url(../img/svg/kobayasu_top.svg);
    mask-mode: alpha;
    -webkit-mask-mode: alpha;
}
.top .inner {
    padding: 0;
}
.top_image::after {
    display: block;
    content: '';
    width: 100%;
    height: 50vh;
    background-color: rgba(0, 0, 0, 0.25);
}
.top h1 {
    display: block;
    width: calc(100% - 90px);
    max-width: 980px;
    color: #fff;
    position: absolute;
    bottom: 105px;
    font-size: 1.0rem;
    line-height: 1.5em;
}

/* concept */
.concept {
    display: block;
    width: 100%;
    height: 50vh;
    text-align: center;
}
.concept h1 {
    color: #79431C;
}
.concept_contents {
    display: block;
    width: calc(100% - 80px);
    text-align: left;
    margin: 40px auto;
    font-size: 1.5rem;
}
.concept p {
    font-size: 0.5em;
    margin-bottom: 1.0em;
}
.concept p:last-of-type {
    margin-bottom: 0;
}

/* service */
.service .section_title span {
    background-color: #006934;
}
.service .inner {
    width: calc(100% - 40px);
}
.service_contents {
    display: flex;
    width: calc(100% - 40px);
    margin: 40px auto;
}
.service_content {
    width: 33.33%;
    padding-top: calc(33.33% - 13px);
    text-align: center;
    position: relative;
    border-radius: 50%;
    background-size: cover;
}
.service_content div {
    display: block;
    width: 100%;
    height: 80px;
    position: absolute;
    bottom: 104px;
    left: 0;
}
.service_content div h2 {
    color: #fff;
    margin-bottom: 2.375em;
}
.more_btn {
    display: block;
    width: 60px;
    margin: 0 auto;
    font-size: 12px;
    line-height: 12px;
    white-space: nowrap;
    padding: 12px 48px;
    background-color: #533119;
    color: #fff;
    text-decoration: none;
    border-radius: 36px;
}
.service_content:nth-child(1) {
    background-image: url("../img/service_1.png");
    background-position: left;
    margin-right: 20px;
}
.service_content:nth-child(2) {
    background-image: url("../img/service_2.png");
    background-position: -100px 0;
}
.service_content:nth-child(3) {
    background-image: url("../img/service_3.png");
    margin-left: 20px;
    background-position: -100px 0;
}


/* access */
.access .section_title span {
    background-color: #EA651A;
}
.access .map {
    display: block;
    width: calc(100% - 40px);
    height: 300px;
    margin: 40px auto 0;
}

/* information */
.info_contents {
    display: block;
    width: calc(100% - 80px);
    margin: 40px auto;
}
.info_contents img {
    float: left;
    width: 50%;
    height: auto;
    max-width: 450px;
    object-fit: cover;
    mask-position: center;
    -webkit-mask-position: center;
    mask-size: contain;
    -webkit-mask-size: contain;
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
}
#shop_image {
    mask-image: url(../img/svg/shop.svg);
    -webkit-mask-image: url(../img/svg/shop.svg);
    mask-mode: alpha;
    -webkit-mask-mode: alpha;
}
.info_detail {
    float: right;
    width: 50%;
    font-size: 1.5rem;
    background-color: #fff;
    padding: 60px 0;
    border-radius: 2.0rem;
    margin-top: 150px;
    margin-right: -10px;
}
/* information */
.information .section_title span {
    background-color: #B0E362;
}

/* footer background image */
.footer_bg {
    display: block;
    width: 100%;
    height: 555px;
    background-image: url(../img/vegetable_tile_3.png);
    mask-position: center;
    -webkit-mask-position: center;
    mask-size: cover;
    -webkit-mask-size: cover;
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
}
#footer_bg {
    mask-image: url(../img/svg/kobayasu_footer.svg);
    -webkit-mask-image: url(../img/svg/kobayasu_footer.svg);
    mask-mode: alpha;
    -webkit-mask-mode: alpha;
}
/* footer */
#footer {
    display: block;
    width: 100%;
    margin-top: -555px;
}
#footer .inner {
    width: calc(100% - 40px);
    position: relative;
    padding: 230px 0 130px;
}
#footer small {
    color: #fff;
    margin: 0;
}
#footer .logo_pc {
    display: block;
    width: 130px;
    height: 36px;
    background-image: url("../img/svg/kobayasu_noen_logo_text.svg");
    margin-top: 0;
    margin-bottom: 0.5rem;
}
#footer .global_nav {
    right: 0;
    top: 230px;
}
#footer .global_nav ul li {
    vertical-align: top;
}
#footer dl {
    width: 50%;
    font-size: 1.5rem;
    color: #fff;
}
#footer dt:first-of-type, #footer dd:first-of-type {
    display: none;
}
#footer dt:nth-of-type(2){
    display: none;
}
#footer dd:nth-of-type(2) {
    padding-left: 0;
}
#footer dt {
    width: 3.0em;
    text-align: left;
}
#footer dd {
    padding-left: 3.0em;
}
@media screen and (max-width: 1024px) {
    #footer .logo_pc {
        display: none;
    }
}
#footer .logo_sp {
    display: none;
}
@media screen and (max-width: 1024px) {
    #footer .logo_sp {
        display: block;
    }
}
#footer .global_nav {
    display: block;
}
@media screen and (max-width: 1024px) {
    #footer .global_nav {
        display: none;
    }
}

